// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommoditySelector passes data as expected 1`] = `
<div>
  <div
    data-testid="Selector"
  >
    <span>
      {"id":"customId","labelAttribute":"mnemonic","options":[],"placeholder":"My placeholder","isClearable":false,"defaultValue":{"mnemonic":"EUR"},"className":"class"}
    </span>
  </div>
</div>
`;

exports[`CommoditySelector renders as expected 1`] = `
<div>
  <div
    data-testid="Selector"
  >
    <span>
      {"id":"commoditySelector","labelAttribute":"mnemonic","options":[],"placeholder":"Choose commodity","isClearable":true,"className":""}
    </span>
  </div>
</div>
`;
